tests/baselines/reference/checkJsdocTypeTagOnObjectProperty2.errors.txt
0.js(5,3): error TS2322: Type 'number' is not assignable to type 'string'.
0.js(8,7): error TS2322: Type 'string' is not assignable to type 'number'.
0.js(11,20): error TS2322: Type 'string' is not assignable to type 'number'.
0.js(13,15): error TS2322: Type 'string' is not assignable to type 'number'.
0.js(15,3): error TS2322: Type 'undefined' is not assignable to type 'string'.
0.js(19,5): error TS2322: Type 'number' is not assignable to type 'string'.
0.js(22,5): error TS2322: Type 'number' is not assignable to type 'string'.
0.js(22,22): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.


==== 0.js (8 errors) ====
    // @ts-check
    var lol;
    const obj = {
      /** @type {string|undefined} */
      bar: 42,
      ~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
      /** @type {function(number): number} */
      method1(n1) {
          return "42";
          ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
      },
      /** @type {function(number): number} */
      method2: (n1) => "lol",
                       ~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
      /** @type {function(number): number} */
      arrowFunc: (num="0") => num + 42,
                  ~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
      /** @type {string} */
      lol
      ~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'string'.
    }
    lol = "string"
    /** @type {string} */
    var s = obj.method1(0);
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    /** @type {string} */
    var s1 = obj.method2("0");
        ~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                         ~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.